@@ -85,7 +85,7 @@ typedef struct
 	int			nextcheck;
 	int			lastclock;
 	int			mtime;
-	int			time_added;
+	int			data_expected_from;
 	unsigned char		type;
 	unsigned char		data_type;
 	unsigned char		value_type;
@@ -209,6 +209,7 @@ typedef struct
 	const char	*host;
 	const char	*name;
 	int		maintenance_from;
+	int		data_expected_from;
 	int		errors_from;
 	int		disable_until;
 	int		snmp_errors_from;
@@ -894,7 +895,7 @@ static void	DCsync_items(DB_RESULT result)
 			item->lastclock = 0;
 			ZBX_STR2UINT64(item->lastlogsize, row[31]);
 			item->mtime = atoi(row[32]);
-			item->time_added = now;
+			item->data_expected_from = now;
 		}
 		else if (NULL != item->triggers && NULL == item->triggers[0])
 		{
@@ -1767,6 +1768,7 @@ static void	DCsync_hosts(DB_RESULT result)
 			host->maintenance_status = (unsigned char)atoi(row[7]);
 			host->maintenance_type = (unsigned char)atoi(row[8]);
 			host->maintenance_from = atoi(row[9]);
+			host->data_expected_from = 0;
 
 			host->errors_from = atoi(row[10]);
 			host->available = (unsigned char)atoi(row[11]);
@@ -4565,8 +4567,10 @@ void	DCconfig_set_trigger_value(zbx_uint64_t triggerid, unsigned char value,
 void	DCconfig_set_maintenance(const zbx_uint64_t *hostids, int hostids_num, int maintenance_status,
 		int maintenance_type, int maintenance_from)
 {
-	int		i;
+	int		i, now;
 	ZBX_DC_HOST	*dc_host;
+
+	now = time(NULL);
 
 	LOCK_CACHE;
 
@@ -4575,9 +4579,14 @@ void	DCconfig_set_maintenance(const zbx_uint64_t *hostids, int hostids_num, int 
 		if (NULL == (dc_host = zbx_hashset_search(&config->hosts, &hostids[i])))
 			continue;
 
-		if (HOST_MAINTENANCE_STATUS_OFF == dc_host->maintenance_status ||
-				HOST_MAINTENANCE_STATUS_OFF == maintenance_status)
+		if (dc_host->maintenance_status != maintenance_status)
 			dc_host->maintenance_from = maintenance_from;
+
+		/* store time at which no-data maintenance ended for the host (either */
+		/* because no-data maintenance ended or because maintenance type was */
+		/* changed to normal), this is needed for nodata() trigger function */
+		if (MAINTENANCE_TYPE_NODATA == dc_host->maintenance_type && MAINTENANCE_TYPE_NODATA != maintenance_type)
+			dc_host->data_expected_from = now;
 
 		dc_host->maintenance_status = maintenance_status;
 		dc_host->maintenance_type = maintenance_type;
@@ -5329,25 +5338,28 @@ void	DCget_expressions_by_name(zbx_vector_ptr_t *expressions, const char *name)
 
 /******************************************************************************
  *                                                                            *
- * Function: DCget_item_time_added                                            *
+ * Function: DCget_data_expected_from                                         *
  *                                                                            *
- * Purpose: returns time of adding of an item into the configuration cache    *
+ * Purpose: Returns time since which data is expected for the given item. We  *
+ *          would not mind not having data for the item before that time, but *
+ *          since that time we expect data to be coming.                      *
  *                                                                            *
  * Parameters: itemid  - [IN] the item id                                     *
- *             seconds - [OUT] the number of seconds of adding of an item     *
- *                             into the configuration cache                   *
+ *             seconds - [OUT] the time data is expected as a Unix timestamp  *
  *                                                                            *
  ******************************************************************************/
-int	DCget_item_time_added(zbx_uint64_t itemid, int *time_added)
+int	DCget_data_expected_from(zbx_uint64_t itemid, int *seconds)
 {
 	ZBX_DC_ITEM	*item;
+	ZBX_DC_HOST	*host;
 	int		ret = FAIL;
 
 	LOCK_CACHE;
 
-	if (NULL != (item = zbx_hashset_search(&config->items, &itemid)))
+	if (NULL != (item = zbx_hashset_search(&config->items, &itemid)) &&
+			NULL != (host = zbx_hashset_search(&config->hosts, &item->hostid)))
 	{
-		*time_added = item->time_added;
+		*seconds = MAX(item->data_expected_from, host->data_expected_from);
 		ret = SUCCEED;
 	}
 
