@@ -39,7 +39,7 @@
  * Adding data
  *
  *   Whenever a new item value is added to system (history tables) the item value must be
- *   also added added to Value Cache with zbx_add_value() function to keep it up to date.
+ *   also added added to Value Cache with zbx_dc_add_value() function to keep it up to date.
  *
  * Retrieving data
  *
